첫 프래그먼트 화면에 직접 배치 - tag 속성으로 다른 프래그먼트와 구별할 수 있는 표식

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,10 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-
+    <fragment
+        class="com.example.fragment_20211204.FirstFragment"
+        android:layout_width="match_parent"
+        android:layout_height="244dp"
+        android:tag="첫번째 프래그먼트" />
 
 </LinearLayout>
