--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,22 +8,34 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <fragment
-        class="com.example.fragment_20211204.FirstFragment"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:tag="첫번째 프래그먼트" />
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <fragment
+                class="com.example.fragment_20211204.FirstFragment"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:tag="첫번째 프래그먼트" />
 
-    <fragment
-        class="com.example.fragment_20211204.SecondFragment"
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:tag="두번째 프래그먼트" />
+            <fragment
+                class="com.example.fragment_20211204.SecondFragment"
+                android:layout_width="match_parent"
+                android:layout_height="400dp"
+                android:tag="두번째 프래그먼트" />
 
-    <fragment
-        class="com.example.fragment_20211204.FirstFragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:tag="first 프래그먼트" />
+            <fragment
+                class="com.example.fragment_20211204.FirstFragment"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:tag="first 프래그먼트" />
+        </LinearLayout>
+
+    </ScrollView>
+
+
 
 </LinearLayout>
